exclude last remaining spotbugs issues